// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-AykKC sc-AykKD cVjfel"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-AykKC sc-AykKD fhKdRU"
>
  foo
</button>
`;
